--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,7 @@ services:
       dockerfile: Dockerfile   # Optionnel si le nom est Dockerfile
     container_name: peaqock2
     environment:
-      - ENCRYPTION_PASSWORD=Peaq0ck_S3cr3t_K3y_2025!
-      - ENABLE_ENCRYPTION=false
+      - ENCRYPTION_PASSWORD=ton_mot_de_passe_secret_ici
     volumes:
       - ./data2:/data
       - ./sa.json:/root/sa.json
